syntax = "proto3";

option csharp_namespace = "SubscriptionService.Contracts.GrpcClients";

service UserService {
    rpc UserWithIdExists(UserWithIdExistsRequest) returns (UserWithIdExistsResponse) {}
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {}
    rpc GetIdUserNameMap(GetIdUserNameMapRequest) returns (GetIdUserNameMapResponse) {}
}

message UserWithIdExistsRequest{
    string id = 1;
}

message GetUserByIdRequest{
    string id = 1;
}

message GetIdUserNameMapRequest{
    repeated string ids = 1;
}

message UserWithIdExistsResponse{
    bool user_exists = 1; 
}

message GetUserByIdResponse {
    UserInfo user = 1;
    string error = 2;
}

message GetIdUserNameMapResponse{
    map<string,string> usernames_by_id = 1;
}

message UserInfo{
    string id = 1;
    string user_name = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
}
